--- a/src/index.html
+++ b/src/index.html
@@ -15,4 +15,5 @@
   <span id="loader" class="loader hidden"></span>
 
   <script type="module" src="./main.js"></script>
+  <div class="loader hidden"></div>
 </body>
